--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -1,6 +1,8 @@
 name: Release Deploy
 
 on:
+  release:
+    types: [published]
   workflow_dispatch:
     inputs:
       newVersion:
@@ -9,13 +11,15 @@ on:
         required: true
         
 jobs:
-  updateBinaryTarget:
+  updatePackageSwift:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Update Package.swift
-      run: |
-        ./Scripts/UpdatePackageManifest.bash ${{ github.event.inputs.newVersion }}
+    - run: ./Scripts/UpdatePackageManifest.bash ${{ github.ref }}
+      if: github.event_name == "release"
+    - run: ./Scripts/UpdatePackageManifest.bash ${{ event.inputs.newVersion }}
+      if: github.event_name == "workflow_dispatch"
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
+      uses: peter-evans/create-pull-request@v5
