--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -18,9 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Update Package.swift with release ref
       run: ./Scripts/UpdatePackageManifest.bash ${{ github.ref }}
-      if: github.event_name == "release"
+      if: github.event_name == 'release'
     - name: Update Package.swift with new version
       run: ./Scripts/UpdatePackageManifest.bash ${{ github.event.inputs.newVersion }}
-      if: github.event_name == "workflow_dispatch"
+      if: github.event_name == 'workflow_dispatch'
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v5
