--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -24,3 +24,5 @@ jobs:
       if: github.event_name == 'workflow_dispatch'
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v5
+      with:
+        base: ${{ github.head_ref }}
