fix: update script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,9 @@ jobs:
         type: string
       changelog:
         type: string
-    docker:
-      - image: cimg/base:stable
+    macos:
+      xcode: 15.4.0
+    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - gh/install
