--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,11 +1,11 @@
-name: Release Notification
+name: Publish
 
 on:
   release:
     types: [published]
 
 jobs:
-  release-manifest:
+  publish-manifest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -27,15 +27,15 @@ jobs:
       - name: Update SDK Manifests
         run: ./Scripts/UpdateManifests.bash ${{ github.ref_name }} $CHECKSUM
 
-      # - name: Commit and Push
-      #   run: |
-      #     git config --global user.email "$SRE_EMAIL"
-      #     git config --global user.name "GitHub Bot"
-      #     git add Package.swift FlowplayerSDK.podspec
-      #     git commit -m "release: ${{ github.ref_name }}"
-      #     git push origin main
+      - name: Commit and Push
+        run: |
+          git config --global user.email "$SRE_EMAIL"
+          git config --global user.name "GitHub Bot"
+          git add Package.swift FlowplayerSDK.podspec
+          git commit -m "release: ${{ github.ref_name }}"
+          git push origin main
 
-  release-cocoapods:
+  publish-cocoapods:
     runs-on: ubuntu-latest
     needs: release-manifest
     steps:
