ci(gha): update publish.yaml

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,10 +12,7 @@ jobs:
 
       - name: Download release asset from public repo
         run: |
-          gh api \
-          -H "Accept: application/vnd.github+json" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          ${{ github.repository }}/FlowplayerSDK.zip
+          gh release download --pattern 'FlowplayerSDK.zip'
         env:
           GH_TOKEN: ${{ github.token }}
 
