--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,6 +16,9 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
 
+      - name: DEBUG
+        run: ls -al
+
       - name: Calculate new checksum
         run: |
           echo "CHECKSUM=$(shasum -a 256 FlowplayerSDK.zip | awk '{print $1}')" >> $GITHUB_ENV
