--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,8 +43,32 @@ jobs:
           git commit -m "release: v${{ inputs.tag }}"
           git push origin main
 
-  publish-cocoapods:
+      - name: Persist workspace artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-artifacts-zip
+          path: |
+            FlowplayerSDK.zip
+            Documentation.zip
+
+  publish_release:
     runs-on: ubuntu-latest
     needs: publish-manifest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Get persisted artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: release-artifacts-zip
+
+      - name: Publish public release
+        run: gh release create ${{ inputs.tag }} FlowplayerSDK.zip Documentation.zip -t "v${{ inputs.tag }}" --notes ${{ inputs.changelog }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+
+  publish-cocoapods:
+    runs-on: ubuntu-latest
+    needs: publish_release
     steps:
       - uses: actions/checkout@v4
